Se corrigieron rutas, vistas y controlador de deliveries.

--- a/app/views/deliveries/_form.html.erb
+++ b/app/views/deliveries/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@delivery) do |f| %>
+<%= simple_form_for([@business, @delivery]) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
