--- a/app/views/deliveries/new.html.erb
+++ b/app/views/deliveries/new.html.erb
@@ -5,8 +5,8 @@
     </div>
     <div class="col-md-2">
       <div class="actions">
-        <%= link_to icon('chevron-left'), deliveries_path, 
-          class: 'btn btn-default', data: { toggle: 'tooltip', container: 'body'  }, 
+        <%= link_to icon('chevron-left'), business_deliveries_path(@business),
+          class: 'btn btn-default', data: { toggle: 'tooltip', container: 'body'  },
           title: t('.back', default: t('global.actions.back')) %>
       </div>
     </div>
