--- a/app/views/deliveries/edit.html.erb
+++ b/app/views/deliveries/edit.html.erb
@@ -5,10 +5,10 @@
     </div>
     <div class="col-md-2">
       <div class="actions">
-        <%= link_to icon('chevron-left'), deliveries_path, 
+        <%= link_to icon('chevron-left'), business_deliveries_path(@business), 
           class: 'btn btn-default', data: { toggle: 'tooltip', container: 'body' }, 
           title: t('.back', default: t('global.actions.back')) %>
-        <%= link_to icon('eye-open'), @delivery, 
+        <%= link_to icon('eye-open'), business_delivery_path(@business, @delivery), 
           class: 'btn btn-default', data: { toggle: 'tooltip', container: 'body' }, 
           title: t('.show', default: t('global.actions.show')) %>
       </div>
