--- a/app/views/deliveries/index.html.erb
+++ b/app/views/deliveries/index.html.erb
@@ -2,7 +2,7 @@
   <div class="row">
     <h1 class="col-md-10"> <%= t '.title' %></h1>
     <div class="actions col-md-2">
-      <%= link_to icon('plus'), new_delivery_path, 
+      <%= link_to icon('plus'), new_business_delivery_path(@business), 
         class: 'btn btn-success', data: { toggle: 'tooltip', container: 'body' }, 
         title: t('deliveries.actions.new', default: t('global.actions.new')) %>
       <a class="btn btn-info" role="button" data-toggle="collapse"
@@ -36,15 +36,15 @@
           <td><%= delivery.end_date %></td>
           <td>
             <div class="btn-toolbar btn-group-xs">
-              <%= link_to icon('eye-open'), delivery,
+              <%= link_to icon('eye-open'), business_delivery_path(@business, delivery),
                 class: 'btn btn-link',
                 title: t('deliveries.actions.show', default: t('global.actions.show')),
                 data: { toggle: 'tooltip', container: 'body', placement: 'left' } %>
-              <%= link_to icon('pencil'), edit_delivery_path(delivery),
+              <%= link_to icon('pencil'), edit_business_delivery_path(@business, delivery),
                 class: 'btn btn-link',
                 title: t('deliveries.actions.edit', default: t('global.actions.edit')),
                 data: { toggle: 'tooltip', container: 'body', placement: 'left' } %>
-              <%= link_to icon('trash'), delivery,  method: :delete,
+              <%= link_to icon('trash'), business_delivery_path(@business, delivery),  method: :delete,
                 class: 'btn btn-link text-danger',
                 title: t('deliveries.actions.destroy', default: t('global.actions.destroy')),
                 data: { toggle: 'tooltip', container: 'body', placement: 'left', 
