--- a/app/views/orders/new_order.html.erb
+++ b/app/views/orders/new_order.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for(@order) do |f| %>
+<%= simple_form_for([@business, @order]) do |f| %>
   <%= f.error_notification %>
 
   <div class="form-inputs">
