--- a/app/views/businesses/_form.html.erb
+++ b/app/views/businesses/_form.html.erb
@@ -3,8 +3,10 @@
 
   <div class="form-inputs">
     <div class="row">
-      <%= f.input :name, wrapper_html: { class: 'col-md-6' } %>
-      <%= f.input :address, wrapper_html: { class: 'col-md-6' } %>
+      <%= f.input :name, wrapper_html: { class: 'col-md-5' } %>
+      <%= f.input :address, wrapper_html: { class: 'col-md-4' } %>
+      <%= f.input :path_strategy, as: :select2, collection: PathStrategy.strategy_types,
+        wrapper_html: { class: 'col-md-3' } %>
     </div>
   </div>
 
