--- a/app/views/deliveries/_form.html.erb
+++ b/app/views/deliveries/_form.html.erb
@@ -7,6 +7,8 @@
         <%= f.input :delivery_man_id, as: :select2, collection: DeliveryMan.all %>
         <%= f.input :start_date, as: :datetime, html5: true, disabled: true %>
         <%= f.input :end_date, as: :datetime, html5: true, disabled: true %>
+        <%= f.input :order_ids, as: :select2, collection: Order.ready_to_send, multiple: true %>
+        <%= f.hidden_field :path_strategy, value: @business.path_strategy %>
       </div>
     </div>
   </div>
