--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -10,7 +10,7 @@
       </div>
       <div class="col-md-6">
         <%# f.input :product_ids, as: :select2, multiple: true, collection: @business.products %>
-        <%= f.input :start_date, as: :date, html5: true %>
+        <%= f.input :start_date, as: :date, html5: true, input_html: { value: Date.today } %>
       </div>
     </div>
   </div>
