--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -9,7 +9,7 @@
         <%= f.input :address %>
       </div>
       <div class="col-md-6">
-        <%# f.input :product_ids, as: :select2, multiple: true, collection: @business.products %>
+        <%= f.input :product_ids, as: :select2, multiple: true, collection: @business.products %>
         <%= f.input :start_date, as: :date, html5: true, input_html: { value: Date.today } %>
       </div>
     </div>
