Se refactorizó flujo de creación de una orden desde el frontend.

--- a/app/views/layouts/frontend.html.erb
+++ b/app/views/layouts/frontend.html.erb
@@ -20,10 +20,8 @@
       <%= render 'shared/frontend/header' %>
       <%= render 'shared/frontend/navbar' %> 
     <div id="content" class="container">
-
-
+      <%= render 'shared/frontend/flashes' %>
       <%= yield %>
-
     </div>
       <%= render 'shared/frontend/footer' %> 
   </body>
