--- a/app/views/orders/track_order.html.erb
+++ b/app/views/orders/track_order.html.erb
@@ -12,3 +12,59 @@
     </div>
   </div>
 </div>
+
+<% if @order.present? %>
+    <div class="row">
+      <div class="col-md-6">
+        <dl class="dl-horizontal well well-sm">
+            <dt><%= t 'activerecord.attributes.order.start_date' %></dt>
+            <dd><%= @order.start_date %></dd>
+            <dt><%= t 'activerecord.attributes.order.end_date' %></dt>
+            <dd><%= @order.end_date %></dd>
+        </dl>
+      </div>
+      <div class="col-md-6">
+        <dl class="dl-horizontal well well-sm">
+            <dt><%= t 'activerecord.attributes.delivery.delivery_man' %></dt>
+            <dd><%= @order.delivery.try :delivery_man || "Repartidor no asignado" %></dd>
+        </dl>
+      </div>
+    </div>
+    <div class="block-group">
+      <div class="block left-column col-3">
+        <div class="list">
+          <div class="row">
+            <div class="col-md-12">
+              <dl class="dl-horizontal well well-sm order-list">
+                <dt><%= t 'activerecord.attributes.order.address' %></dt>
+                <dd><%= @order.address %></dd>
+                <dt><%= t 'activerecord.attributes.order.status' %></dt>
+                <dd><%= raw t "enum.order.status.#{@order.status}" %></dd>
+              </dl>
+            </div>
+          </div>
+          <div class="list-footer">
+            <%# link_to("Más resultados", "javascript:;", id: "more") %>
+          </div>
+        </div>
+      </div>
+      <div class="right-column block col-7">
+        <div class="toggle-control">
+          <button type="button" class="toggle-btn toggle-btn-hide" > &lt; </button>
+        </div>
+        <div data-google-maps="<%= Settings.google_maps.javascript_api_key %>" 
+            data-url="<%# positions_business_delivery_path(@business, @delivery) %>"
+            data-orders-positions-markers="<%= @order.serialized.to_json %>">
+        </div>
+      </div>
+    </div>
+<% else %>
+  <div class="row">
+    <div class="col-md-12">
+      <div class="alert alert-warning" role="alert">
+        <%= icon('info-sign') %>
+        <%= "No encontramos su pedido! Por favor chequee el código ingresado." %>
+      </div>
+    </div>
+  </div>
+<% end %>
