--- a/app/views/orders/track_order.html.erb
+++ b/app/views/orders/track_order.html.erb
@@ -13,6 +13,29 @@
   </div>
 </div>
 
+<div>
+  <div class="search">
+    <%= simple_form_for(:order, url: business_track_order_path(@business), method: 'GET') do |f| -%>
+      <div class="row">
+        <%= f.input :hash_code,
+                    required: false,
+                    label: t('.hash_code'),
+                    wrapper_html: { class: 'col-md-4' }
+        %>
+      </div>
+      <div class="row">
+        <div class="col-md-4 text-right">
+          <%= f.submit t('global.filters.search_order'), class: 'btn btn-info btn-sm' %>
+          <%= link_to icon('remove'),
+                      business_track_order_path(@business, _reset: 'reset'),
+                      title: t('global.filters.clear_filter'),
+                      data: { toggle: 'tooltip', container: 'body', placement: 'left' },
+                      class: 'btn btn-primary btn-sm' -%>
+        </div>
+      </div>
+    <% end -%>
+  </div>
+</div>
 <% if @order.present? %>
     <div class="row">
       <div class="col-md-6">
@@ -49,13 +72,24 @@
         </div>
       </div>
       <div class="right-column block col-7">
-        <div class="toggle-control">
-          <button type="button" class="toggle-btn toggle-btn-hide" > &lt; </button>
-        </div>
-        <div data-google-maps="<%= Settings.google_maps.javascript_api_key %>" 
-            data-url="<%# positions_business_delivery_path(@business, @delivery) %>"
-            data-orders-positions-markers="<%= @order.serialized.to_json %>">
-        </div>
+        <% if @order.delivery.present? %>
+          <div class="toggle-control">
+            <button type="button" class="toggle-btn toggle-btn-hide" > &lt; </button>
+          </div>
+          <div data-google-maps="<%= Settings.google_maps.javascript_api_key %>" 
+              data-url="<%= positions_business_order_path(@business, @order) %>"
+              data-orders-positions-markers="<%= @order.serialized.to_json %>">
+          </div>
+        <% else %>
+          <div class="row">
+            <div class="col-md-11 col-md-offset-1">
+              <div class="alert alert-info" role="alert">
+                <%= icon('info-sign') %>
+                <%= "Su pedido aún no se encuentra en proceso de envio. En breve podrá seguir el recorrido que realiza el mismo en un mapa (deberá recargar la página)." %>
+              </div>
+            </div>
+          </div>
+        <% end %>
       </div>
     </div>
 <% else %>
