--- a/app/views/orders/_filter.html.erb
+++ b/app/views/orders/_filter.html.erb
@@ -2,34 +2,46 @@
   <div class="search">
     <%= search_form_for(@q, url: business_orders_path(@business)) do |f| -%>
       <div class="row">
-        <%= f.input :business_id, as: :select2, collection: Business.all,
+        <%= f.input :customer_full_name_cont,
+                    required: false,
+                    label: t('.customer_full_name'),
+                    wrapper_html: { class: 'col-md-4' }
+        %>
+        <%= f.input :customer_email_eq,
+                    required: false,
+                    label: t('.customer_email'),
+                    wrapper_html: { class: 'col-md-4' }
+        %>
+        <%= f.input :address_cont,
+                    required: false,
+                    label: t('.address'),
+                    wrapper_html: { class: 'col-md-4' }
+        %>
+      </div>
+      <div class="row">
+        <%= f.input :business_id_eq, as: :select2, collection: Business.all,
                     required: false,
                     label: t('.business'),
                     wrapper_html: { class: 'col-md-3' }
         %>
-        <%= f.input :status, as: :select2, collection: Order.statuses,
+        <%= f.input :status_eq, as: :select2, collection: Order.statuses,
                     required: false,
                     label: t('.status'),
                     wrapper_html: { class: 'col-md-3' }
         %>
-        <%= f.input :start_date,
+        <%= f.input :start_date_eq,
                     required: false,
                     label: t('.start_date'),
                     wrapper_html: { class: 'col-md-3' },
                     as: :date,
                     html5: true 
         %>
-        <%= f.input :end_date,
+        <%= f.input :end_date_eq,
                     required: false,
                     label: t('.end_date'),
                     wrapper_html: { class: 'col-md-3' },
                     as: :date,
                     html5: true 
-        %>
-        <%= f.input :address,
-                    required: false,
-                    label: t('.address'),
-                    wrapper_html: { class: 'col-md-3' }
         %>
       </div>
       <div class="row">
