--- a/app/views/deliveries/show.html.erb
+++ b/app/views/deliveries/show.html.erb
@@ -48,6 +48,10 @@
                       <dd><%= order.address %></dd>
                       <dt><%= t 'activerecord.attributes.order.status' %></dt>
                       <dd><%= raw t "enum.order.status.#{order.status}" %></dd>
+                      <dd><span class='label label-default'>
+                          <%= link_to "Ir al pedido", business_order_path(@business, order) %>
+                        </span>
+                      </dd>
                   </dl>
                 </div>
               </div>
