--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -12,7 +12,7 @@
         <%= f.input :address %>
       </div>
       <div class="col-md-6">
-        <%= f.input :start_date, as: :date, html5: true, input_html: { value: Date.today } %>
+        <%= f.input :start_date, as: :datetime_picker, input_html: { value: Date.today } %>
         <%= f.input :delivery_id, as: :select2, collection: Delivery.all %>
       </div>
     </div>
