--- a/app/views/deliveries/new.html.erb
+++ b/app/views/deliveries/new.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <div class="row">
     <div class="col-md-10">
-      <h1><%= t '.title', default: t('global.new.title') %></h1>
+      <h1><%= t '.title', model: @business, default: t('global.new.title') %></h1>
     </div>
     <div class="col-md-2">
       <div class="actions">
