--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -7,7 +7,7 @@
     </div>
     <div class="row">
       <%= f.input :description, wrapper_html: { class: 'col-md-6' } %>
-      <%= f.input :price, wrapper_html: { class: 'col-md-6' } %>
+      <%= f.input :price, as: :float, wrapper_html: { class: 'col-md-6' } %>
     </div>
   </div>
 
