--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -39,7 +39,7 @@
         <tr>
           <td><%= product.name %></td>
           <td><%= product.description %></td>
-          <td><%= product.price %></td>
+          <td>$ <%= product.price %></td>
           <td>
             <div class="btn-toolbar btn-group-xs">
               <%= link_to icon('eye-open'), business_product_path(@business, product),
