--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -30,7 +30,7 @@
                 <b class="caret"></b>
               </a>
               <ul class="dropdown-menu">
-                <li><%= link_to t('views.navbar.dropdown.strategy'), '#' %></li>
+                <li><%= link_to t('views.navbar.dropdown.edit_strategy'), edit_strategy_business_path(@business) %></li>
                 <li><%= link_to t('views.navbar.dropdown.edit_business'), edit_business_path(@business) %></li>
               </ul>
             </li>
