--- a/app/views/businesses/_strategy_form.html.erb
+++ b/app/views/businesses/_strategy_form.html.erb
@@ -4,7 +4,7 @@
   <div class="form-inputs">
     <div class="row">
       <%= f.input :path_strategy, as: :select2, collection: PathStrategy.strategy_types,
-        wrapper_html: { class: 'col-md-4' } %>
+        label_method: ->(strategy) { label_for_strategy(strategy) }, wrapper_html: { class: 'col-md-4' } %>
     </div>
   </div>
 
