--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -70,12 +70,12 @@
                   title: t('orders.actions.dispatch', default: t('global.actions.dispatch')),
                   data: { toggle: 'tooltip', container: 'body', placement: 'left' } %>
                 <% end %>
-                <% if order.can_mark_as_sended? %>
-                  <%= link_to icon('send'), mark_as_sended_business_order_path(@business, order),
+                <%# if order.can_mark_as_sended? %>
+                  <%# link_to icon('send'), mark_as_sended_business_order_path(@business, order),
                   class: 'btn btn-link', method: :post,
                   title: t('orders.actions.mark_as_sended', default: t('global.actions.process')),
                   data: { toggle: 'tooltip', container: 'body', placement: 'left' } %>
-                <% end %>
+                <%# end %>
                 <% if order.can_suspend? %>
                   <%= link_to icon('exclamation-sign'), suspend_business_order_path(@business, order),
                   class: 'btn btn-link', method: :post,
