Se refactorizó logica de mapas para mostrar cambios en los estados de las ordenes y actualizaciones de recorridos asincronicamente.

--- a/app/views/deliveries/show.html.erb
+++ b/app/views/deliveries/show.html.erb
@@ -74,6 +74,7 @@
     </div>
     <div data-google-maps="<%= Settings.google_maps.javascript_api_key %>" 
          data-recommended-path-url="<%= recommended_path_business_delivery_path(@business, @delivery) %>"
+         data-markers-url="<%= serialized_orders_business_delivery_path(@business, @delivery) %>"
          data-url="<%= positions_business_delivery_path(@business, @delivery) %>"
          data-orders-positions-markers="<%= @markers.to_json %>"
          data-business-marker="<%= @business_position %>"
